--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,6 @@
 
 [context.deploy-preview]
   command = "yarn build:preview"
+
+[context.production.environment]
+  HUGO_BASEURL = "https://www.therapyhelp.center/"
